# bfstool

./: .gitignore  Cargo.toml  EXTRA_TESTS.md  Keys.sample.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bfs_file_dat.md  build.rs  build_structs.rs  extra_test_data.blake3
.github/workflows/: build_test.yml
src/: archive_reader.rs  archived_data.rs  archived_file_info.rs  bfs.rs  compression.rs  crypt.rs  display.rs  filter.rs  formats.rs  identify.rs  key_parser.rs  keys.rs  lib.rs  main.rs  util.rs  version_parser.rs
src/copy_filters/: fo1-ps2-jp.txt  fo1-ps2-usa.txt  fo1-ps2.txt  fo1-xbox.txt  fo2-ps2-beta.txt  fo2-ps2-usa.txt  fo2-ps2.txt  fo2-xbox.txt  foho.txt  fouc-pc.txt  fouc-x360-de.txt  fouc-x360-jp.txt  fouc-x360.txt  rru.txt  srr.txt
src/crypt/: bzf2001.rs
src/crypt/bzf2001/: decrypt.rs  encrypt.rs
src/filters/: fo1.txt  fo2-demo.txt  fo2-fx-patch.txt  fo2-pc-modloader.txt  fo2-ps2-beta.txt  fo2-xbox-beta.txt  fo2.txt  foho.txt  fouc-x360.txt  fouc.txt  rru.txt  srr.txt
src/formats/: bfs2004b.rs  bfs2007.rs  bzf2001.rs  bzf2002.rs  mod.rs
src/formats/bfs2004a/: archive_header.rs  file_header.rs  hash_table.rs  hash_table_entry.rs  mod.rs  raw_archive.rs
src/formats/bfs2004b/: archive_header.rs  file_header.rs  hash_table.rs  hash_table_entry.rs  huffman_dict_entry.rs  huffman_helpers.rs  metadata_header.rs  metadata_helpers.rs  mod.rs  raw_archive.rs
src/formats/bfs2007/: archive_header.rs  file_header.rs  metadata_header.rs  mod.rs  raw_archive.rs
src/formats/bzf2001/: archive_header.rs  file_header.rs  raw_archive.rs
src/formats/bzf2002/: archive_header.rs  file_header.rs  raw_archive.rs
src/v1/: mod.rs
src/v1/structs/: bfs_header.rs  file_header.rs  file_info_table_entry.rs  mod.rs
src/v2/: mod.rs  util.rs
src/v2/structs/: bfs_header.rs  file_header.rs  file_info_table_entry.rs  file_name_table_header.rs  huffman_tree_entry.rs  mod.rs
src/v3/: mod.rs
src/v3/structs/: bfs_header.rs  mod.rs
test_data/bfs2004a/: sources.csv
test_data/bfs2004b/: fo2a_decoded_names.txt  sources.csv
test_data/bfs2007/: sources.csv
test_data/bzf2001/: sources.csv
test_data/bzf2002/: sources.csv
test_data/cli/: list.txt  tree.txt
tests/: archive_reader.rs  extra_crypt.rs
