[package]
name = "bfstool"
version = "2.0.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/bfstool/"
homepage = "https://github.com/xNyaDev/bfstool/"
description = "Library to interact with Bugbear (BZF and BFS) archives"
categories = ["parser-implementations"]
keywords = ["bugbear", "bzf", "bfs", "archive"]

# Dependencies marked as optional are used for the binaries
# Currently it is not possible to specify them only for the specific binaries
# See https://github.com/rust-lang/cargo/issues/1982
[dependencies]
binrw = "0.11.1"
clap = { version = "4.2.1", optional = true, features = ["derive"] }
flate2 = "1.0.25"
number_prefix = { version = "0.4.0", optional = true }
tabled = { version = "0.10.0", optional = true }
termtree = { version = "0.4.1", optional = true }

[build-dependencies]
tauri-winres = { git = "https://github.com/xNyaDev/winres.git", optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
cli = ["dep:clap", "dep:number_prefix", "dep:tabled", "dep:termtree", "dep:tauri-winres"]
default = ["cli"]

[[bin]]
name = "bfstool-cli"
path = "src/bin/cli/main.rs"
required-features = ["cli"]
