[package]
name = "bfstool"
version = "2.0.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/bfstool/"
homepage = "https://github.com/xNyaDev/bfstool/"
description = "Library to interact with Bugbear (BZF and BFS) archives"
categories = ["parser-implementations"]
keywords = ["bugbear", "bzf", "bfs", "archive"]

# Dependencies marked as optional are used for the binaries
# Currently it is not possible to specify them only for the specific binaries
# See https://github.com/rust-lang/cargo/issues/1982
[dependencies]
binrw = "0.13.1"
bitvec = "1.0.1"
clap = { version = "4.4.8", optional = true, features = ["derive"] }
flate2 = "1.0.28"
hex = { version = "0.4.3", optional = true, features = ["serde"] }
indicatif = { version = "0.17.7", optional = true }
number_prefix = { version = "0.4.0", optional = true }
serde = { version = "1.0.192", optional = true, features = ["derive"] }
tabled = { version = "0.14.0", optional = true }
termtree = { version = "0.4.1", optional = true }
thiserror = "1.0.50"
toml = { version = "0.8.8", optional = true }
zstd = "0.13.0"

[build-dependencies]
tauri-winres = { git = "https://github.com/xNyaDev/winres.git", optional = true }

[dev-dependencies]
blake3 = "1.5.0"
pretty_assertions = "1.4.0"

[features]
cli = ["dep:clap", "dep:indicatif", "dep:number_prefix", "dep:tabled", "dep:tauri-winres", "dep:termtree", "dep:toml", "keys"]
default = ["cli"]
extra_tests = []
keys = ["dep:hex", "dep:serde"]

[[bin]]
name = "bfstool-cli"
path = "src/bin/cli/main.rs"
required-features = ["cli"]
